--- a/CelestialGUI/CelestialGUI.ui
+++ b/CelestialGUI/CelestialGUI.ui
@@ -29,6 +29,9 @@
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
       <widget class="QComboBox" name="cb_catalogs">
+       <property name="insertPolicy">
+        <enum>QComboBox::InsertAlphabetically</enum>
+       </property>
        <property name="sizeAdjustPolicy">
         <enum>QComboBox::AdjustToContents</enum>
        </property>
